--- a/frontend/src/assets/styles/mentions.css
+++ b/frontend/src/assets/styles/mentions.css
@@ -42,7 +42,8 @@
   transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
   background-color: #fff;
   border-radius: 4px;
-  box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.2), 0px 8px 10px 1px rgba(0,0,0,0.14), 0px 3px 14px 2px rgba(0,0,0,0.12);
+  box-shadow: 0px 1px 6px #D4D4D4;
+  overflow: hidden;
 }
 
 .mentions__suggestions__item {
@@ -67,22 +68,18 @@
 
 .mentions__suggestions__item:hover {
   text-decoration: none;
-  background-color: rgba(0, 0, 0, 0.04);
+  background-color: rgba(161, 174, 200, 0.4);
 }
 
 .mentions__suggestions__item--focused {
-  /* background-color: #cee4e5; */
-  background-color: rgba(0, 0, 0, 0.04);
+  background-color: rgba(161, 174, 200, 0.4);
 }
 
 .mentions__mention {
   position: relative;
   z-index: 1;
-  color: #3f51b5;
-  text-decoration: underline;
+  color: #599C0B;
   padding: 2px 1px 2px 0;
-  background: #ededed;
-  /* text-shadow: 1px 1px 1px white, 1px -1px 1px white, -1px 1px 1px white, -1px -1px 1px white; */
-  /* text-decoration: underline; */
+  background: #fff;
   pointer-events: none;
 }
