#178 Updated email templates

--- a/backend/userhub/_templates/email/group_request.gohtml
+++ b/backend/userhub/_templates/email/group_request.gohtml
@@ -70,6 +70,19 @@
         </td>
         <td class="side-space"></td>
     </tr>
+    <tr>
+        <td class="side-space"></td>
+        <td class="bottom-space"></td>
+        <td class="side-space"></td>
+    </tr>
+    <tr class="bgcolor-light-gray"
+            id="footer">
+        <td class="side-space"></td>
+        <td>
+            <p class="color-gray">Questions? Write letter to <span><a href="#">info@peacenik.com</a></span></p>
+        </td>
+        <td class="side-space"></td>
+    </tr>
     </tbody>
 </table>
 </body>
