--- a/backend/userhub/_templates/email/group_add.gohtml
+++ b/backend/userhub/_templates/email/group_add.gohtml
@@ -28,7 +28,7 @@
     <tr>
         <td class="side-space"></td>
         <td>
-            <p>If you do not want to be a member of the group go to the <a href="{{ .GroupLink }}}">group page</a> and click the "leave" button.</p>
+            <p>If you do not want to be a member of the group go to the <a href="{{ .GroupLink }}">group page</a> and click the "leave" button.</p>
         </td>
         <td class="side-space"></td>
     </tr>
@@ -41,6 +41,19 @@
         <td class="side-space"></td>
         <td>
             <p class="color-gray italics">Thanks!</p>
+        </td>
+        <td class="side-space"></td>
+    </tr>
+    <tr>
+        <td class="side-space"></td>
+        <td class="bottom-space"></td>
+        <td class="side-space"></td>
+    </tr>
+    <tr class="bgcolor-light-gray"
+            id="footer">
+        <td class="side-space"></td>
+        <td>
+            <p class="color-gray">Questions? Write letter to <span><a href="#">info@peacenik.com</a></span></p>
         </td>
         <td class="side-space"></td>
     </tr>
