--- a/backend/userhub/_templates/email/message_direct.gohtml
+++ b/backend/userhub/_templates/email/message_direct.gohtml
@@ -14,8 +14,13 @@
     <tr>
         <td class="side-space"></td>
         <td>
-            <p>Thanks for registering with Peacenik.<br>
-                Please confirm your account by clicking:</p>
+            <p>
+                Greetings from Peacenik!
+                <br>
+                <b>{{ .UserDisplayName }}</b> sent you in a direct message.
+                <br>
+                To view the message click:
+            </p>
         </td>
         <td class="side-space"></td>
     </tr>
@@ -27,7 +32,21 @@
     <tr>
         <td class="side-space"></td>
         <td class="button-cell">
-            <a class="button" href="{{ .Link }}">Confirm Account</a>
+            <a href="{{ .MessageLink }}" class="button">View message</a>
+        </td>
+        <td class="side-space"></td>
+    </tr>
+    <tr>
+        <td class="side-space"></td>
+        <td class="space-in-between"></td>
+        <td class="side-space"></td>
+    </tr>
+    <tr>
+        <td class="side-space"></td>
+        <td>
+            <p class="color-gray italics">
+                Thanks!
+            </p>
         </td>
         <td class="side-space"></td>
     </tr>
